# draftjs-wysiwyg

./: .env  README.md  package-lock.json  package.json  tsconfig.json
editor/: index.ts
editor/text-editor/: interface.ts
editor/toggle/: image-toggle.tsx
nodejs/: package.json  tsconfig.json
nodejs/public/: index.html
nodejs/src/: App.tsx  index.js  index.tsx
nodejs/src/editor/decorators/: decorators.tsx  interface.ts
nodejs/src/editor/editor-header/: editor-header.tsx
nodejs/src/editor/text-editor/: text-editor.tsx
nodejs/src/editor/toggle/: interface.ts
public/: index.html
python/: .gitignore  MANIFEST.in  pyproject.toml  setup.py
python/django_draftjs/: __init__.py  apps.py
python/django_draftjs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/django_draftjs/static/django_draftjs/: draftjs.js
python/django_draftjs/templates/django_draftjs/: draftjs.html
src/: App.tsx  index.css  index.tsx
src/editor/align-map/: align-map.tsx  interface.ts
src/editor/text-editor/: text-editor.tsx
src/editor/toggle/: editor-toggle.tsx  link-toggle.tsx
src/text-editor/: align-map.tsx  decorators.tsx  editor-header.tsx  editor-toggle.tsx  image-toggle.tsx  link-toggle.tsx  text-editor.css  text-editor.js  text-editor.tsx
