[tool.poetry]
name = "django-draftjs"
version = "0.0.2"
description = ""
authors = ["Jonathan Willianto <jowillianto@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
django = "4.0"
wheel = "^0.42.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
